# pg2_practica_7

./: .gitignore  README.md  requirements.txt  setup.cfg
src/pronom_tools_test/: containers.py  format_info.py  single_signature.py  utils.py
