[metadata]
name = pronom_tools_test
version = 0.0.1
description = Paquete de utilidades para obtener los formatos PRONOM de un archivo
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/yefeza/pg2_practica_7
author = Yeison Fernandez
author_email = contacto@90horasporsemana.com
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development 

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where=src